--- a/src/results/gpt-4.1-mini/use_case_task_extraction/Extracted_tasks_from_UC-009.json
+++ b/src/results/gpt-4.1-mini/use_case_task_extraction/Extracted_tasks_from_UC-009.json
@@ -4,10 +4,9 @@
     {
       "personaId": "P-005",
       "tasks": [
-        "Feels empowered rather than surveilled by ALFREDs discreet supervision",
-        "Resists dependency and maintains dignity during system use",
-        "Grows to appreciate a tentative rhythm balancing privacy with personalized care",
-        "Frustrates caregiver by restricting real-time data sharing"
+        "Rejects physical exercises that seem too taxing or embarrassing",
+        "Balances minimal engagement with ALFRED against feelings of irritation and isolation",
+        "Accepts ALFRED only as a tool to support recovery on her own terms despite slower progress"
       ]
     }
   ]
