--- a/src/results/gpt-4.1-mini/use_case_task_extraction/Extracted_tasks_from_UC-005.json
+++ b/src/results/gpt-4.1-mini/use_case_task_extraction/Extracted_tasks_from_UC-005.json
@@ -4,16 +4,22 @@
     {
       "personaId": "P-005",
       "tasks": [
-        "Engages in segmented cognitive game sessions tailored to her preferences",
-        "Finds Elenas open sharing style overwhelming during joint sessions"
+        "Speaks firmly to ALFRED expecting concise and to-the-point responses",
+        "Prefers ALFRED to remain almost invisible in daily routine",
+        "Expresses skepticism about the system's monitoring of recovery",
+        "Expects the system to respect her autonomy and personal boundaries"
       ]
     },
     {
       "personaId": "P-002",
       "tasks": [
-        "Allows automatic activation of ALFRED for daily exercises and cognitive challenges",
-        "Struggles to understand Olivia's guarded and slow adaptation style",
-        "Balances social inclusion and health tracking through ALFRED's capabilities"
+        "Engages in challenging cognitive exercises to push mental limits",
+        "Allows ALFRED to send proactive notifications and reminders",
+        "Embraces wearables and health sensors for continuous progress tracking",
+        "Uses health and activity data feedback from ALFRED as motivation",
+        "Welcomes interruptions from ALFRED as helpful prompts",
+        "Trusts ALFRED with personal health information for personalized care",
+        "Expects a dynamic and fully integrated gaming and health experience"
       ]
     }
   ]
